syntax = "proto3";

package fub.unity;

message Vector3 {
  float x = 1;
  float y = 2;
  float z = 3;
}

message Vector4 {
  float x = 1;
  float y = 2;
  float z = 3;
  float w = 4;
}